--- a/sections/marquee-banner.liquid
+++ b/sections/marquee-banner.liquid
@@ -94,7 +94,7 @@
 
 {% schema %}
 {
-  "name": "Cinta Publicitaria Animada",
+  "name": "Marquee Banner",
   "settings": [
     {
       "type": "text",
@@ -155,7 +155,7 @@
   ],
   "presets": [
     {
-      "name": "Cinta Publicitaria"
+      "name": "Marquee Banner"
     }
   ]
 }
